docker build flexible vars