@@ -4,7 +4,7 @@ http://guix.gnu.org/cookbook/en/guix-cookbook.html
 https://git.sr.ht/~lle-bout/awesome-guix#awesome-guix
 https://github.com/pjotrp/guix-notes/blob/master/HACKING.org
 https://framagit.org/tyreunom/guix-home-manager
-
+https://ambrevar.xyz/guix-advance/
 
 # Directories
 ls /gnu/store
@@ -39,8 +39,6 @@ Guix past channel: old Python versions https://gitlab.inria.fr/guix-hpc/guix-pas
 https://gitlab.inria.fr/guix-hpc/guix-hpc-non-free cuda mkl 
 https://gitlab.inria.fr/guix-hpc/guix-hpc
 https://gitlab.com/mbakke/guix-chromium
-
-
 
 
 By default guix pull
@@ -117,4 +115,74 @@ If the term "container" makes you think of Docker, note that this is something d
 1:37 AM <terpri> see (info "(guix) Inferiors")
 1:38 AM <dftxbs3e> inferiors can reference any channel or older versions of GNU Guix (up to a certain point because it needs support code in the version you try to use I think)
 
+# build systems
 
+
+maven:
+https://maven.apache.org/configure.html
+ -Xmx2048m -Xms1024m -XX:MaxPermSize=512m -Djava.awt.headless=true
+ <maven.compiler.source>1.7</maven.compiler.source>
+
+https://guix.gnu.org/manual/en/html_node/Build-Systems.html
+- ant-build-system java
+  adds: ant
+        Java Development Kit (JDK) 
+   as provided by the icedtea package to the set of inputs. 
+  Different packages can be specified with the #:ant and #:jdk parameters, respectively.
+- clojure-build-system
+  extension of ant-build-system, 
+  Different packages can be specified with the 
+       #:clojure
+       #:jdk
+       #:zip
+       #:aot-include
+       #:aot-exclude
+       #:omit-source?
+       #%main-class
+
+- maven-build-system
+    You can override the default jdk and maven packages with the  
+    #:jdk
+    #:maven.
+
+
+- python-build-system
+   http://guix-website-test.cbaines.net/en/packages/python-pip-20.0.2/
+   https://yhetil.org/guix-user/1701167f4c3.e4e64c8a25038.4576513321829582679@zoho.com/T/
+
+
+- r-build-system
+    https://www.bioconductor.org/
+    Bioconductor uses the R statistical programming language
+
+- node-build-system
+    Which Node.js package is used to interpret the npm commands can be 
+    specified with the #:node parameter which defaults to node.
+
+
+    https://github.com/leibniz-psychology/psychnotebook-deploy/blob/master/src/zpid/machines/yamunanagar/cron.scm
+
+    https://github.com/leibniz-psychology/psychnotebook-deploy/blob/master/src/zpid/machines/yamunanagar/ci.scm
+
+# package tweaking
+
+guix build --with-input=guile=guile@2.0 guix
+
+https://guix.gnu.org/manual/en/html_node/Package-Transformation-Options.html
+
+https://guix.gnu.org/manual/en/html_node/Derivations.html
+
+
+
+https://guix.gnu.org/manual/en/html_node/package-Reference.html
+
+ let ((toolchain (specification->package "gcc-toolchain@10")))
+  
+  (package-with-c-toolchain 
+     hello `(
+               ("toolchain" ,toolchain)
+            )))
+
+
+(transform-package-toolchain replacement-specs)
+list of strings like \"fftw=gcc-toolchain@10\"
